Use mongo watch to get proper streaming behaviour on SSE
(cherry picked from commit ccd5f613e9f25dde92f7a929c94636da744341e7)